fix layout issues and added more cards for content

--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,9 @@ body {
     align-items: flex-start;
     flex-direction: column;
     font-family: 'Calibri', 'Trebuchet MS', sans-serif;
+    max-width: 1500px;
+    width: 100%;
+    margin: auto;
 }
 
 .section-title {
@@ -23,11 +26,14 @@ header {
     position: sticky;
     top: 0;
     padding: 0;
+    z-index: 10;
 }
 
 nav {
     display: flex;
     justify-content: space-between;
+    background-color: rgb(167, 25, 48);
+    width: 100%;
 }
 
 .logo {
@@ -75,6 +81,11 @@ section {
     margin-top: -60px;
 }
 
+.game-flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .game-card {
     box-sizing: border-box;
     margin: 10px;
@@ -102,6 +113,9 @@ section {
     position: relative;
     overflow: hidden;
     margin-right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .game-card-hover__text {
